hphp/test/slow/dv_array/parse-error2.php.expectf

Fatal error: syntax error, unexpected T_DOUBLE_ARROW, expecting ']' in %s/parse-error2.php on line 4
